Corrected route path for file upload.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>File Metadata Microservice</h1>
     <p>Use the interface below to upload a file and display its contents.</p>
-    <form action="/" method="POST" enctype="multipart/form-data">
+    <form action="/api/fileanalyse" method="POST" enctype="multipart/form-data">
       <input type="file" name="upfile" id="upfile" style="display: none" />
       <p class="file-to-upload"><em>No file chosen.</em></p>
       <button type="button" class="choose-file-button">Choose File</button>
